--- a/front-end/flory/public/index.html
+++ b/front-end/flory/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	fe4c3edbef9c82460e4eaf6f038052ff"
+    ></script>
     <title>React Redux App</title>
   </head>
   <body>
