Feat: 스타일 설정 및 주변 일기 리스트 추가

--- a/front-end/flory/public/index.html
+++ b/front-end/flory/public/index.html
@@ -24,9 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- 카카오 지도 api -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	fe4c3edbef9c82460e4eaf6f038052ff"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fe4c3edbef9c82460e4eaf6f038052ff"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fe4c3edbef9c82460e4eaf6f038052ff&libraries=services,clusterer,drawing"
     ></script>
     <title>React Redux App</title>
   </head>
