--- a/front-end/flory/public/index.html
+++ b/front-end/flory/public/index.html
@@ -31,6 +31,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fe4c3edbef9c82460e4eaf6f038052ff&libraries=services,clusterer,drawing"
     ></script>
     <title>React Redux App</title>
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
