Feat: 사이트 제목 설정

--- a/front-end/flory/public/index.html
+++ b/front-end/flory/public/index.html
@@ -30,7 +30,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fe4c3edbef9c82460e4eaf6f038052ff&libraries=services,clusterer,drawing"
     ></script>
-    <title>React Redux App</title>
+    <title>Bloomer</title>
     <base href="/" />
   </head>
   <body>
